# kingfisherAI

./: .dockerignore  .env.example  .gitignore  CHANGES.md  DEVELOPER_GUIDE.md  ENHANCEMENT_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  README.md  Render.yaml  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: ci.yml
apps/api/: Dockerfile  cache.py  compat.py  config.py  images.py  main.py  orchestrator.py  requirements.txt  schemas.py
apps/api/tools/: __init__.py  search.py  weather.py
apps/web/: AI_SDK_V5_INTEGRATION.md  Dockerfile  RAG_ADDON_INSTALL.md  TEST_DOCUMENTS_GUIDE.md  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
apps/web/ai/: types.ts
apps/web/app/: globals.css  layout.tsx  page.tsx  pinnedPrompts.ts  useToast.tsx
apps/web/app/api/agent/: route.ts
apps/web/app/api/cards/: route.ts
apps/web/app/api/chat/: route.ts
apps/web/app/api/docs/: route.ts
apps/web/app/api/docs/[docId]/: route.ts
apps/web/app/api/ingest/: route.ts
apps/web/app/api/rag-chat/: route.ts
apps/web/app/api/rag-search/: route.ts
apps/web/app/labs/cards/: page.tsx
apps/web/app/labs/dropzone/: page.tsx
apps/web/components/: CardGrid.tsx  ImageWithCredit.tsx  LessonCard.tsx  RagConfig.tsx  SkeletonCard.tsx  StepItem.tsx  Toast.tsx
apps/web/lib/rag/: chunk.ts  embeddings.ts  extract.ts  registry.ts  store.ts
tests/: __init__.py  test_chat_happy.py  test_health_ready.py  test_images_cardify.py  test_schema_validates.py  test_stream.py
